better use of acronyms and use of builtin excellent features of latex (like figure counting)

--- a/acros.tex
+++ b/acros.tex
@@ -164,5 +164,10 @@
 \newacronym{SCF}{SCF}{Software Carpentry Foundation}
 \newacronym{YMG}{YMG}{Young Members Group}
 \newacronym{FCWMD}{FCWMD}{Fuel Cycle and Waste Management Division}
+\newacronym{TRU}{TRU}{transuranic} 
+\newacronym{KAERI}{KAERI}{Korea Atomic Energy Research Institute}
+\newacronym{PRIDE}{PRIDE}{Pyroprocessing Integrated Demonstration}
+%\newacronym{<++>}{<++>}{<++>}
+%\newacronym{<++>}{<++>}{<++>}
 %\newacronym{<++>}{<++>}{<++>}
 %\newacronym{<++>}{<++>}{<++>}
