--- a/2018-westphal-antpc.tex
+++ b/2018-westphal-antpc.tex
@@ -40,44 +40,61 @@ gtw2@illinois.edu
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{abstract}
 Quantifying potential signatures and observables of material diverted from a 
-pyroprocessing facility presents a modeling challenge.
-This work assesses system parameters that influence separation efficiency and 
-throughput. We leverage these parameters to implement a customizable pyroprocessing facility archetype for use with the Cyclus framework.
-This generic facility model will allow simulations to 
-quantify signatures and observables associated with various operational modes 
-and material throughputs for a variety of facility designs. Such quantification 
-can timely detection of material diversion. 
-This paper describes the Pyre facility archetype design, pyroprocessing flowsheets captured by the model, and simulation capabilities it enables. 
-To analyze data retrieved from the model, we propose a class for tracking and 
-observing signatures and observables which will be extensible for other 
-facility archetypes in the future.
+pyroprocessing facility presents a modeling challenge.  This work assesses 
+system parameters that influence separation efficiency and throughput. We 
+leverage these parameters to implement a customizable pyroprocessing facility 
+archetype for use with the Cyclus framework.  This generic facility model will 
+allow simulations to quantify signatures and observables associated with 
+various operational modes and material throughputs for a variety of facility 
+designs. Such quantification can timely detection of material diversion.  This 
+paper describes the Pyre facility archetype design, pyroprocessing flowsheets 
+captured by the model, and simulation capabilities it enables.  To analyze data 
+retrieved from the model, we propose a class for tracking and observing 
+signatures and observables which will be extensible for other facility 
+archetypes in the future.
 \end{abstract}
 \section{Introduction}
-The diversion of significant quantities of special nuclear material from the nuclear fuel cycle is major non-proliferation 
-concern \cite{noauthor_iaea_2017}. These diversions must be detected in a timely manner using signatures and observables in 
-order to properly safeguard the fuel cycle. Pyroprocessing is a used nuclear fuel separations technology capable of both 
-converting current generation waste into sodium fast reactor fuel, and reprocessing next generation molten salt fuel types. 
-With a new reprocessing technology comes new signatures and observables which in turn necessitate new diversion detection methods. 
-The goal of this research is to identify potential signs of material diversion in a pyroprocessing facility and implement models 
-of these processes into a detailed pyroprocessing facility archetype to the modular, agent-based, fuel cycle simulator, \Cyclus \cite{huff_fundamental_2016}. This facility archetype will equip users of the \Cyclus fuel cycle simulator to investigate the 
-detection timeliness enabled by novel signatures and observables in various fuel cycle scenarios.
+The diversion of significant quantities of special nuclear material from the 
+nuclear fuel cycle is major non-proliferation concern 
+\cite{noauthor_iaea_2017}. These diversions must be detected in a timely manner 
+using signatures and observables in order to properly safeguard the fuel cycle. 
+Pyroprocessing is a used nuclear fuel separations technology capable of both 
+converting current generation waste into sodium fast reactor fuel, and 
+reprocessing next generation molten salt fuel types.  With a new reprocessing 
+technology comes new signatures and observables which in turn necessitate new 
+diversion detection methods.  The goal of this research is to identify 
+potential signs of material diversion in a pyroprocessing facility and 
+implement models of these processes into a detailed pyroprocessing facility 
+archetype to the modular, agent-based, fuel cycle simulator, \Cyclus 
+\cite{huff_fundamental_2016}. This facility archetype will equip users of the 
+\Cyclus fuel cycle simulator to investigate the detection timeliness enabled by 
+novel signatures and observables in various fuel cycle scenarios.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Background: \Cyclus}
-\Cyclus models the flow of material through agent-based user-defined nuclear scenarios. Facilities in nuclear fuel cycles vary, 
-requiring a diverse collection of pre-designed facility process models, known as \emph{archetypes}. \Cycamore, the CYClus 
-Additional MOdules REpository, provides the common facilities seen in simulations (separations, enrichment, reactor, etc.)
-\cite{huff_extensions_2014}. Archetypes provide a mold for users to input values specific to each facility with a known output 
-\Cyclus can interpret. Simulations run in discrete time steps that allow exact isotopes to be dynamically tracked between facilities \cite{huff_fundamental_2016}. Tracking requires a form of signature or observable to follow the material accurately throughout 
-and between facilities. Current capabilities would be truck deliveries, power draw, and steam production that have been proven 
-sufficient for maximum likelihood estimations of diversion \cite{Hou_2016,Yilmaz_2016}.
-\Cyclus' discrete time allows users to investigate diversion and flag the time and location diversion occurs.
+\Cyclus models the flow of material through agent-based user-defined nuclear 
+scenarios. Facilities in nuclear fuel cycles vary, requiring a diverse 
+collection of pre-designed facility process models, known as \emph{archetypes}. 
+\Cycamore, the CYClus Additional MOdules REpository, provides the common 
+facilities seen in simulations (separations, enrichment, reactor, etc.) 
+\cite{huff_extensions_2014}. Archetypes provide a mold for users to input 
+values specific to each facility with a known output \Cyclus can interpret. 
+Simulations run in discrete time steps that allow exact isotopes to be 
+dynamically tracked between facilities \cite{huff_fundamental_2016}. Tracking 
+requires a form of signature or observable to follow the material accurately 
+throughout and between facilities. Current capabilities would be truck 
+deliveries, power draw, and steam production that have been proven sufficient 
+for maximum likelihood estimations of diversion \cite{Hou_2016,Yilmaz_2016}.  
+\Cyclus' discrete time allows users to investigate diversion and flag the time 
+and location diversion occurs.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Background: Pyroprocessing}
-Pyroprocessing is an eletrochemical separation process used to recycle spent fuel into . With the capability of processing 
-various forms of waste, efficiencies will differ according to design. There are four major systems within pyroprocessing 
-with observable waste: voloxidation, electroreduction, electrorefining, electrowinning \cite{Borrelli_2017}. These 
-processes have been defined by KAERI through their development of Pyroprocessing Integrated Demonstration (PRIDE) facility. 
+Pyroprocessing is an eletrochemical separation process used to recycle spent 
+fuel into . With the capability of processing various forms of waste, 
+efficiencies will differ according to design. There are four major systems 
+within pyroprocessing with observable waste: voloxidation, electroreduction, 
+electrorefining, electrowinning \cite{Borrelli_2017}. These processes have been 
+defined by \gls{KAERI} through their development of \gls{PRIDE} facility. 
 
 \begin{figure}[ht] % replace 't' with 'b' to force it to be on the bottom
 	\centering
@@ -86,10 +103,12 @@ processes have been defined by KAERI through their development of Pyroprocessing
 	\label{fig:flowchart}
 \end{figure}
 
-Figure 1 demonstrates the primary separations steps involved in a general pyroprocessing facility. Included are the process' 
-main parameters along the left side of the flowsheet, each applied to processes most significantly impacted. The boxes on the 
-right side of the processes contain the observable waste produced by each step that \Cyclus can track. Each of main processes 
-are described below regarding information to be used by \Cyclus.
+Figure \ref{fig:flowchart} demonstrates the primary separations steps involved 
+in a general pyroprocessing facility. Included are the process' main parameters 
+along the left side of the flowsheet, each applied to processes most 
+significantly impacted. The boxes on the right side of the processes contain 
+the observable waste produced by each step that \Cyclus can track. Each of main 
+processes are described below regarding information to be used by \Cyclus.
 
 \subsection{Voloxidation}
 
@@ -107,7 +126,7 @@ along with the reduction and conversion of zirconium into metallic form \cite{ch
 
 Recoverable waste from reduction is fed into an anode basket suspended in a graphite cathode. LiCl-KCl eutectic is used as 
 electrolyte above 500$^{\circ}$C \cite{flowsheet_1998,lee_korean_2011}. The uranium dissolves at the anode to recombine at 
-the cathode as metallic uranium. The waste transuranics (TRUs) and lathanides are in a soluble chloride form  while fission 
+the cathode as metallic uranium. The lathanides and \gls{TRU} waste are in a soluble chloride form  while fission 
 products and cladding remain in the anode basket. Finally, actinides and fission products are removed from the cladding 
 electrochemically \cite{lee_korean_2011}.
 
@@ -117,7 +136,8 @@ The molten salt contains TRUs from electrorefining and are separated through ele
 With a temperature of 500$^{\circ}$C there is approximately 99 wt\% reduction in actinides and lanthanides \cite{flowsheet_1998}. 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Method: \Cyclus Simulation}
-The separations facility provided by the \Cycamore library expansion is used as an initial model of a simple PRIDE facility. 
+The separations facility provided by the \Cycamore library expansion is used as 
+an initial model of a simple \gls{PRIDE} facility. 
 The separations archetype allows for the declaration of a feed stream and requires the user-definition of facility efficiencies. 
 Each waste stream requires a material balance over voloxidation, electroreduction, electrorefining and electrowinning. The main 
 waste streams found are metallic waste, ceramic waste from electrowinning and electroreduction, and vitrified waste. Vitrified 
@@ -134,7 +154,7 @@ design choices that require consideration.
 \subsection{Variations}
 It's important to consider variations in the construction of a pyroprocessing archetype since facility designs vary in 
 multiple aspects which affect the throughput and efficiencies of different waste streams. Advanced methods for electrorefining 
-developed by KAERI \cite{lee_advanced_nodate} further improve salt removal efficiencies and the effect of parameter variation. 
+developed by \gls{KAERI} \cite{lee_advanced_nodate} further improve salt removal efficiencies and the effect of parameter variation. 
 Temperature and pressure provide a significant improvement in removal efficiency, but can vary depending on facility specifications. 
 
 \begin{table}[h]
@@ -153,7 +173,7 @@ Temperature and pressure provide a significant improvement in removal efficiency
 	\label {tab:pressure}
 \end{table}
 
-The data shown in Tables I and II are collected from KAERI's research into advanced electrochemical separation processes
+The data shown in Tables I and II are collected from \gls{KAERI}'s research into advanced electrochemical separation processes
 \cite{lee_advanced_nodate}. Salt removal efficiencies mentioned are concerned with the percentage of fission products 
 and salt remaining in the uranium dendrites. The evaporation coefficient represents the amount of salt evaporated due 
 to vacuum pressure. As shown by Table I, the addition of vacuum pressure to the system improves removal efficiency 
